style: 코드 수정
- 깔끔하게 수정